public/css/illuminator.css
body {
  background: #455164;
  color: #ffffff;
  margin: 0;
  font: 12px Consolas, Menlo, Monaco, "Lucida Console", "DejaVu Sans Mono", "Courier New", monospace;
}

button {
  border: none;
  background: none;
  margin: 0;
  outline: none;
  padding: 0;
  font-family: inherit;
  font-size: inherit;
  line-height: inherit;
  cursor: pointer;
}

a {
  text-decoration: none;
  color: #ffffff;
}

.centered {
  position: fixed;
  top: 50%;
  left: 50%;
}
.centered.logo {
  margin-top: -69px;
  margin-left: -80px;
}


#sidebar {
  position: absolute;
  width: 220px;
  top: 0;
  left: 0;
  bottom: 0;
  overflow: hidden;
  -webkit-overflow-scrolling: touch;
}
#sidebar .logo {
  padding: 20px 30px;
}
#sidebar .files {
  height: calc(100% - 192px);
  padding: 0 30px 0;
  line-height: 1.4;
  overflow-y: auto;
}


.list {
  padding: 6px;
}
.list.active {
  background: rgba(0, 0, 0, .1);
}
.list:hover {
  background: rgba(0, 0, 0, .06);
}
.filename:before {
  padding-right: 6px;
  content:url("/images/file.png");
}

#log {
  background: rgba(0, 0, 0, .1);
  bottom: 10px;
  left: 220px;
  overflow: hidden;
  position: absolute;
  right: 10px;
  top: 20px;
  line-height: 1.4;
}
#log .header {
  border-bottom: 1px solid #455164;
  line-height: 40px !important;
  height: 38px;
  padding: 0 20px;
}
#log .content {
  top: 39px;
  bottom: 0;
  left: 0;
  right: 0;
  position: absolute;
  overflow: hidden;
  overflow-y: auto;
  width: 100%;
}
#log .messages {
  display: table;
  padding: 0 20px;
  white-space: pre-wrap;
}
#log .msg {
  display: table-row;
}
#log .msg:first-child > span {
  padding-top: 10px;
}
#log .msg:last-child {
  height: 100%;
}
#log .msg:last-child .text {
  padding-bottom: 10px;
}
#log .time,
#log .from,
#log .text {
  display: table-cell;
  padding: 2px 0;
  vertical-align: top;
  word-wrap: break-word;
}
#log .time {
  color: #ddd;
  text-align: right;
  width: 46px;
  min-width: 46px;
}
#log .from {
  border-right: 1px solid #455164;
  padding-right: 10px;
  text-align: right;
  width: 134px;
  min-width: 134px;
  cursor: pointer;
}
#log .from.common {
  color: #b1c3ce;
}
#log .from button {
  color: #ddd !important;
}
#log .text {
  padding-left: 10px;
  padding-right: 6px;
  word-break: break-word;
}
#log .wrap,
#log .text a {
  font-style: normal;
  word-break: break-all;
  word-wrap: break-word;
  color: inherit;
  text-decoration: underline dotted #637592;
  -o-transition:1s;
  -ms-transition:1s;
  -moz-transition:1s;
  -webkit-transition:1s;
  transition:1s;
}
#log .text a:hover {
  background-color: #455164;
  -o-transition:.1s;
  -ms-transition:.1s;
  -moz-transition:.1s;
  -webkit-transition:.1s;
  transition:.1s;
}
#log .error,
#log .error .from {
  color: #f00;
}
#log .highlight .from {
  font-weight: bold;
}
#log .highlight .from.common {
  color: #f39c12;
}
#log .join .from,
#log .join {
  color: #aaa;
}
#log.hide-join .join span,
#log.hide-mode .mode span,
#log.hide-motd .motd span,
#log.hide-nick .nick span,
#log.hide-part .part span,
#log.hide-quit .quit {
  display: none !important;
}
#log .action,
#log .action .from,
#log .action .user {
  color: #f39c12 !important;
}

::-webkit-scrollbar {
  width: 10px;
}
::-webkit-scrollbar-track {
  background: transparent; 
}
::-webkit-scrollbar-thumb {
  background: rgba(0, 0, 0, .15);; 
}
::-webkit-scrollbar-thumb:hover {
  background: rgba(0, 0, 0, .25);; 
}

/* Text styles */
.strikethrough {
  text-decoration: line-through;
}
.underline {
  text-decoration: underline;
}
.bold {
  font-weight: bold;
}
.italic {
  font-style: italic;
}

/* Colors palette */
.fore00 { color: #ffffff; }
.fore01 { color: #111111; }
.fore02 { color: #24588e; }
.fore03 { color: #85de8f; }
.fore04 { color: #ff5d54; }
.fore05 { color: #ca8463; }
.fore06 { color: #98667e; }
.fore07 { color: #ff9a42; }
.fore08 { color: #ffed80; }
.fore09 { color: #a8fbc1; }
.fore10 { color: #39CCCC; }
.fore11 { color: #7FDBFF; }
.fore12 { color: #579cd8; }
.fore13 { color: #ffc3f1; }
.fore14 { color: #AAAAAA; }
.fore15 { color: #DDDDDD; }

.back00 { background-color: #ffffff; }
.back01 { background-color: #111111; }
.back02 { background-color: #24588e; }
.back03 { background-color: #85de8f; }
.back04 { background-color: #ff5d54; }
.back05 { background-color: #ca8463; }
.back06 { background-color: #98667e; }
.back07 { background-color: #ff9a42; }
.back08 { background-color: #ffed80; }
.back09 { background-color: #a8fbc1; }
.back10 { background-color: #39CCCC; }
.back11 { background-color: #7FDBFF; }
.back12 { background-color: #579cd8; }
.back13 { background-color: #ffc3f1; }
.back14 { background-color: #AAAAAA; }
.back15 { background-color: #DDDDDD; }

